Fixed #1032, changed modal class, removed cdn dep
Signed-off-by: StanZGenchev <stanislav.genchev@sap.com>

--- a/ide/ui/ide-entity/src/main/resources/META-INF/dirigible/ide-entity/modeler.html
+++ b/ide/ui/ide-entity/src/main/resources/META-INF/dirigible/ide-entity/modeler.html
@@ -91,7 +91,7 @@
 	<button type="button" id="referEntityOpen" ng-show=false data-toggle="modal" data-target="#dialogReferEntity"></button>
 	
 	<!-- Entity Properties -->
-	<div class="modal fade" id="dialogEntityProperties" tabindex="-1" role="dialog" aria-labelledby="dialogEntityPropertiesLabel" aria-hidden="true">
+	<div class="dirigible-modal modal fade" id="dialogEntityProperties" tabindex="-1" role="dialog" aria-labelledby="dialogEntityPropertiesLabel" aria-hidden="true">
 	    <div class="modal-header">
 	        <h3>Entity Details</h3>
 	    </div>
@@ -293,7 +293,7 @@
 	
 	
 	<!-- Property Properties -->
-	<div class="modal fade" id="dialogPropertyProperties" tabindex="-1" role="dialog" aria-labelledby="dialogPropertyPropertiesLabel" aria-hidden="true">
+	<div class="dirigible-modal modal fade" id="dialogPropertyProperties" tabindex="-1" role="dialog" aria-labelledby="dialogPropertyPropertiesLabel" aria-hidden="true">
 	    <div class="modal-header">
 	        <h3>Property Details</h3>
 	    </div>
@@ -514,7 +514,7 @@
 
 
 	<!-- Connector Properties -->
-	<div class="modal fade" id="dialogConnectorProperties" tabindex="-1" role="dialog" aria-labelledby="dialogConnectorPropertiesLabel" aria-hidden="true">
+	<div class="dirigible-modal modal fade" id="dialogConnectorProperties" tabindex="-1" role="dialog" aria-labelledby="dialogConnectorPropertiesLabel" aria-hidden="true">
 	    <div class="modal-header">
 	        <h3>Connector Details</h3>
 	    </div>
@@ -565,7 +565,7 @@
 	
 	
 	<!-- Alert Dialog -->
-	<div class="modal fade" id="dialogAlert" tabindex="-1" role="dialog" aria-labelledby="dialogAlertLabel" aria-hidden="true">
+	<div class="dirigible-modal modal fade" id="dialogAlert" tabindex="-1" role="dialog" aria-labelledby="dialogAlertLabel" aria-hidden="true">
 	    <div class="modal-header">
 	        <h3>{{$parent.alertTitle}}</h3>
 	    </div>
@@ -590,7 +590,7 @@
 
 
 	<!-- Refer Entity Dialog -->
-	<div class="modal fade" id="dialogReferEntity" tabindex="-1" role="dialog" aria-labelledby="dialogReferEntityLabel" aria-hidden="true">
+	<div class="dirigible-modal modal fade" id="dialogReferEntity" tabindex="-1" role="dialog" aria-labelledby="dialogReferEntityLabel" aria-hidden="true">
 	    <div class="modal-header">
 	        <h3>{{$parent.dialogTitle}}</h3>
 	    </div>
