--- a/ide/ui/ide-schema/src/main/resources/META-INF/dirigible/ide-schema/modeler.html
+++ b/ide/ui/ide-schema/src/main/resources/META-INF/dirigible/ide-schema/modeler.html
@@ -83,7 +83,7 @@
 	<button type="button" id="infoOpen" ng-show=false data-toggle="modal" data-target="#dialogInfo"></button>
 	
 	<!-- Table Properties -->
-	<div class="modal fade" id="dialogTableProperties" tabindex="-1" role="dialog" aria-labelledby="dialogTablePropertiesLabel" aria-hidden="true">
+	<div class="dirigible-modal modal fade" id="dialogTableProperties" tabindex="-1" role="dialog" aria-labelledby="dialogTablePropertiesLabel" aria-hidden="true">
 	    <div class="modal-header">
 	        <h3>Table Details</h3>
 	    </div>
@@ -117,7 +117,7 @@
 	
 	
 	<!-- Column Properties -->
-	<div class="modal fade" id="dialogColumnProperties" tabindex="-1" role="dialog" aria-labelledby="dialogColumnPropertiesLabel" aria-hidden="true">
+	<div class="dirigible-modal modal fade" id="dialogColumnProperties" tabindex="-1" role="dialog" aria-labelledby="dialogColumnPropertiesLabel" aria-hidden="true">
 	    <div class="modal-header">
 	        <h3>Column Details</h3>
 	    </div>
@@ -206,7 +206,7 @@
 	</div>
 	
 	<!-- SQL Column Properties -->
-	<div class="modal fade" id="dialogSQLColumnProperties" tabindex="-1" role="dialog" aria-labelledby="dialogSQLColumnPropertiesLabel" aria-hidden="true">
+	<div class="dirigible-modal modal fade" id="dialogSQLColumnProperties" tabindex="-1" role="dialog" aria-labelledby="dialogSQLColumnPropertiesLabel" aria-hidden="true">
 	    <div class="modal-header">
 	        <h3>SQL Details</h3>
 	    </div>
@@ -239,7 +239,7 @@
 	</div>
 
 	<!-- Alert Dialog -->
-	<div class="modal fade" id="dialogAlert" tabindex="-1" role="dialog" aria-labelledby="dialogAlertLabel" aria-hidden="true">
+	<div class="dirigible-modal modal fade" id="dialogAlert" tabindex="-1" role="dialog" aria-labelledby="dialogAlertLabel" aria-hidden="true">
 	    <div class="modal-header">
 	        <h3>{{$parent.alertTitle}}</h3>
 	    </div>
@@ -263,7 +263,7 @@
 	</div>
 	
 	<!-- Info Dialog -->
-	<div class="modal fade" id="dialogInfo" tabindex="-1" role="dialog" aria-labelledby="dialogInfoLabel" aria-hidden="true">
+	<div class="dirigible-modal modal fade" id="dialogInfo" tabindex="-1" role="dialog" aria-labelledby="dialogInfoLabel" aria-hidden="true">
 	    <div class="modal-header">
 	        <h3>{{$parent.infoTitle}}</h3>
 	    </div>
