--- a/ide/ui/ide-workspace/src/main/resources/META-INF/dirigible/ide-workspace/workspace.html
+++ b/ide/ui/ide-workspace/src/main/resources/META-INF/dirigible/ide-workspace/workspace.html
@@ -100,7 +100,7 @@
 	</div>
 	
 	<!-- Create Workspace -->
-	<div class="modal fade" id="dialogCreateWorkspace" tabindex="-1" role="dialog" aria-labelledby="dialogCreateWorkspaceLabel" aria-hidden="true">
+	<div class="dirigible-modal modal fade" id="dialogCreateWorkspace" tabindex="-1" role="dialog" aria-labelledby="dialogCreateWorkspaceLabel" aria-hidden="true">
 	    <div class="modal-header">
 	        <h4>Create Workspace</h4>
 	    </div>
@@ -119,7 +119,7 @@
 	</div>
 	
 	<!-- Create Project -->
-	<div class="modal fade" id="dialogCreateProject" tabindex="-1" role="dialog" aria-labelledby="dialogCreateProjectLabel" aria-hidden="true">
+	<div class="dirigible-modal modal fade" id="dialogCreateProject" tabindex="-1" role="dialog" aria-labelledby="dialogCreateProjectLabel" aria-hidden="true">
 	    <div class="modal-header">
 	        <h4>Create Project</h4>
 	    </div>
@@ -139,7 +139,7 @@
 	</div>
 
 	<!-- Link Project -->
-	<div class="modal fade" id="dialogLinkProject" tabindex="-1" role="dialog" aria-labelledby="dialogLinkProjectLabel" aria-hidden="true">
+	<div class="dirigible-modal modal fade" id="dialogLinkProject" tabindex="-1" role="dialog" aria-labelledby="dialogLinkProjectLabel" aria-hidden="true">
 	    <div class="modal-header">
 	        <h4>Link Project</h4>
 	    </div>
@@ -165,7 +165,7 @@
 	</div>
 	
 	<!-- Generate From Template -->
-	<div class="modal fade" id="dialogGenerateFromTemplate" tabindex="-1" role="dialog" aria-labelledby="dialogGenerateFromTemplateLabel" aria-hidden="true">
+	<div class="dirigible-modal modal fade" id="dialogGenerateFromTemplate" tabindex="-1" role="dialog" aria-labelledby="dialogGenerateFromTemplateLabel" aria-hidden="true">
 	    <div class="modal-header">
 	        <h4>Generate From Template</h4>
 	    </div>
@@ -204,7 +204,7 @@
 	</div>
 	
 	<!-- Generate From Model -->
-	<div class="modal fade" id="dialogGenerateFromModel" tabindex="-1" role="dialog" aria-labelledby="dialogGenerateFromModelLabel" aria-hidden="true">
+	<div class="dirigible-modal modal fade" id="dialogGenerateFromModel" tabindex="-1" role="dialog" aria-labelledby="dialogGenerateFromModelLabel" aria-hidden="true">
 	    <div class="modal-header">
 	        <h4>Generate From Model</h4>
 	    </div>
@@ -257,7 +257,7 @@
 	</div>
 	
 	<!-- Upload File -->
-	<div class="modal fade" id="dialogUploadFile" tabindex="-1" role="dialog" aria-labelledby="dialogUploadFileLabel" aria-hidden="true">
+	<div class="dirigible-modal modal fade" id="dialogUploadFile" tabindex="-1" role="dialog" aria-labelledby="dialogUploadFileLabel" aria-hidden="true">
 	    <div class="modal-header">
 	        <h4>Upload File</h4>
 	    </div>
