--- a/ide/ui/ide-git/src/main/resources/META-INF/dirigible/ide-git/git/git.html
+++ b/ide/ui/ide-git/src/main/resources/META-INF/dirigible/ide-git/git/git.html
@@ -77,7 +77,7 @@
 	<div class="workspace"></div>
 
 	<!-- Clone -->
-	<div class="modal fade" id="dialogClone" tabindex="-1" role="dialog" aria-labelledby="dialogCloneLabel" aria-hidden="true">
+	<div class="dirigible-modal modal fade" id="dialogClone" tabindex="-1" role="dialog" aria-labelledby="dialogCloneLabel" aria-hidden="true">
 	    <div class="modal-header">
 	        <h4>Clone Project</h4>
 	    </div>
@@ -120,7 +120,7 @@
 	</div>
 	
 	<!-- Pull All -->
-	<div class="modal fade" id="dialogPullAll" tabindex="-1" role="dialog" aria-labelledby="dialogPullAllLabel" aria-hidden="true">
+	<div class="dirigible-modal modal fade" id="dialogPullAll" tabindex="-1" role="dialog" aria-labelledby="dialogPullAllLabel" aria-hidden="true">
 	    <div class="modal-header">
 	        <h4>Pull All Projects from Git</h4>
 	    </div>
@@ -156,7 +156,7 @@
 	</div>
 	
 	<!-- Pull -->
-	<div class="modal fade" id="dialogPull" tabindex="-1" role="dialog" aria-labelledby="dialogPullLabel" aria-hidden="true">
+	<div class="dirigible-modal modal fade" id="dialogPull" tabindex="-1" role="dialog" aria-labelledby="dialogPullLabel" aria-hidden="true">
 	    <div class="modal-header">
 	        <h4>Pull Project from Git</h4>
 	    </div>
@@ -192,7 +192,7 @@
 	</div>
 	
 	<!-- Push All -->
-	<div class="modal fade" id="dialogPushAll" tabindex="-1" role="dialog" aria-labelledby="dialogPushAllLabel" aria-hidden="true">
+	<div class="dirigible-modal modal fade" id="dialogPushAll" tabindex="-1" role="dialog" aria-labelledby="dialogPushAllLabel" aria-hidden="true">
 	    <div class="modal-header">
 	        <h4>Push All Projects to Git</h4>
 	    </div>
@@ -228,7 +228,7 @@
 	</div>
 	
 	<!-- Push -->
-	<div class="modal fade" id="dialogPush" tabindex="-1" role="dialog" aria-labelledby="dialogPushLabel" aria-hidden="true">
+	<div class="dirigible-modal modal fade" id="dialogPush" tabindex="-1" role="dialog" aria-labelledby="dialogPushLabel" aria-hidden="true">
 	    <div class="modal-header">
 	        <h4>Push Project to Git</h4>
 	    </div>
@@ -270,7 +270,7 @@
 	</div>
 	
 	<!-- Reset -->
-	<div class="modal fade" id="dialogReset" tabindex="-1" role="dialog" aria-labelledby="dialogResetLabel" aria-hidden="true">
+	<div class="dirigible-modal modal fade" id="dialogReset" tabindex="-1" role="dialog" aria-labelledby="dialogResetLabel" aria-hidden="true">
 	    <div class="modal-header">
 	        <h4>Reset Project from Git</h4>
 	    </div>
@@ -286,7 +286,7 @@
 	</div>
 
 	<!-- Import -->
-	<div class="modal fade" id="dialogImport" tabindex="-1" role="dialog" aria-labelledby="dialogImportLabel" aria-hidden="true">
+	<div class="dirigible-modal modal fade" id="dialogImport" tabindex="-1" role="dialog" aria-labelledby="dialogImportLabel" aria-hidden="true">
 	    <div class="modal-header">
 	        <h4>Import Project(s) from Repository</h4>
 	    </div>
@@ -302,7 +302,7 @@
 	</div>
 
 	<!-- Delete -->
-	<div class="modal fade" id="dialogDelete" tabindex="-1" role="dialog" aria-labelledby="dialogDeleteLabel" aria-hidden="true">
+	<div class="dirigible-modal modal fade" id="dialogDelete" tabindex="-1" role="dialog" aria-labelledby="dialogDeleteLabel" aria-hidden="true">
 	    <div class="modal-header">
 	        <h4>Delete Git Repository</h4>
 	    </div>
@@ -318,7 +318,7 @@
 	</div>
 
 	<!-- Share -->
-	<div class="modal fade" id="dialogShare" tabindex="-1" role="dialog" aria-labelledby="dialogShareLabel" aria-hidden="true">
+	<div class="dirigible-modal modal fade" id="dialogShare" tabindex="-1" role="dialog" aria-labelledby="dialogShareLabel" aria-hidden="true">
 	    <div class="modal-header">
 	        <h4>Share Project to Git</h4>
 	    </div>
@@ -372,7 +372,7 @@
 	</div>
 
 	<!-- Checkout -->
-	<div class="modal fade" id="dialogCheckout" tabindex="-1" role="dialog" aria-labelledby="dialogCheckoutLabel" aria-hidden="true">
+	<div class="dirigible-modal modal fade" id="dialogCheckout" tabindex="-1" role="dialog" aria-labelledby="dialogCheckoutLabel" aria-hidden="true">
 	    <div class="modal-header">
 	        <h4>Checkout Branch</h4>
 	    </div>
@@ -407,7 +407,7 @@
 	
 
 	<!-- Commit -->
-	<div class="modal fade" id="dialogCommit" tabindex="-1" role="dialog" aria-labelledby="dialogCommitLabel" aria-hidden="true">
+	<div class="dirigible-modal modal fade" id="dialogCommit" tabindex="-1" role="dialog" aria-labelledby="dialogCommitLabel" aria-hidden="true">
 	    <div class="modal-header">
 	        <h4>Commit Changes in Project</h4>
 	    </div>
