--- a/ide/ui/ide-git/src/main/resources/META-INF/dirigible/ide-git/index.html
+++ b/ide/ui/ide-git/src/main/resources/META-INF/dirigible/ide-git/index.html
@@ -10,25 +10,27 @@
   -->
 
 <html lang="en" ng-app="git" ng-controller="GitController as git">
+
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<title brandtitle perspective-name="Git"></title>
 
-	<link brandicon/>
-	
+	<link brandicon />
+
 	<!-- FontAwesome icon set -->
-        <link type="text/css" href="/webjars/fontawesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-		
+	<link type="text/css" href="/webjars/fontawesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+
 	<!-- Twitter Bootstrap with Theme Support -->
 	<link type="text/css" rel="stylesheet" href="../../../../services/v4/js/theme/resources.js/bootstrap.min.css">
 
 	<!-- GoldenLayout with Theme Support -->
 	<link type="text/css" rel="stylesheet" href="/services/v4/web/resources/goldenlayout/1.5.9/goldenlayout-base.css" />
-	<link type="text/css" rel="stylesheet" href="../../../../services/v4/js/theme/resources.js/goldenlayout-theme.css" />
-	
+	<link type="text/css" rel="stylesheet"
+		href="../../../../services/v4/js/theme/resources.js/goldenlayout-theme.css" />
+
 	<!-- Custom IDE Styles -->
 	<link type="text/css" rel="stylesheet" href="../../../../services/v4/js/theme/resources.js/ide.css" />
 </head>
@@ -36,20 +38,20 @@
 <body>
 
 	<div menu menu-data-url="../../js/ide-git/services/menu-git.js"></div>
-	
+
 	<div class="shell">
 		<div class="sidebar list-group" sidebar active="Git"></div>
 		<div id="git" class="plane" views-layout views-layout-model="git.layoutModel"></div>
 	</div>
 	<div alert></div>
 	<div class="statusbar" status-bar>{{message}}</div>
-	
+
 	<!-- jQuery -->
 	<script type="text/javascript" src="/webjars/jquery/3.4.1/jquery.min.js"></script>
-	
+
 	<!-- Twitter Bootstrap with Theme Support -->
 	<script type="text/javascript" src="/webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	
+
 	<!-- AngularJS -->
 	<script type="text/javascript" src="/webjars/angularjs/1.4.7/angular.min.js"></script>
 	<script type="text/javascript" src="/webjars/angularjs/1.4.7/angular-resource.min.js"></script>
@@ -57,10 +59,10 @@
 	<!-- GoldenLayout with Theme Support -->
 	<script type="text/javascript" src="/services/v4/web/resources/goldenlayout/1.5.9/goldenlayout.min.js"></script>
 
-	<script type="text/javascript" src="../../../../services/v4/web/ide-core/ui/message-hub.js"></script>	
+	<script type="text/javascript" src="../../../../services/v4/web/ide-core/ui/message-hub.js"></script>
 	<script type="text/javascript" src="../../../../services/v4/web/ide-core/ui/ui-layout.js"></script>
 	<script type="text/javascript" src="../../../../services/v4/web/ide-core/ui/ui-core-ng-modules.js"></script>
-	
+
 	<script type="text/javascript">
 		angular.module('git', ['ngResource', 'ideUiCore'])
 		.config(["messageHubProvider", function(messageHubProvider) {
@@ -107,14 +109,14 @@
 					
 		}]);
 	</script>
-	
+
 	<!-- <script language="JavaScript">
 	    window.addEventListener('beforeunload', function (e) {
 		  e.preventDefault();
 		  e.returnValue = '';
 		});
 	</script> -->
-	
+
 </body>
 
 </html>
