--- a/ide/ui/ide-security/src/main/resources/META-INF/dirigible/ide-security/editors/roles/editor.html
+++ b/ide/ui/ide-security/src/main/resources/META-INF/dirigible/ide-security/editors/roles/editor.html
@@ -50,7 +50,7 @@
 		</form>
 	</div>
 
-	<div class="modal fade" id="entityModal" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="dirigible-modal modal fade" id="entityModal" tabindex="-1" role="dialog" aria-hidden="true">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
