--- a/ide/ui/ide-workbench/src/main/resources/META-INF/dirigible/ide/welcome.html
+++ b/ide/ui/ide-workbench/src/main/resources/META-INF/dirigible/ide/welcome.html
@@ -126,7 +126,7 @@
 	<button type="button" id="generateFromTemplate" ng-show=false data-toggle="modal" data-target="#dialogGenerateFromTemplate"></button>
 
 	<!-- Generate From Template -->
-	<div class="modal fade" id="dialogGenerateFromTemplate" tabindex="-1" role="dialog" aria-labelledby="dialogGenerateFromTemplateLabel" aria-hidden="true">
+	<div class="dirigible-modal modal fade" id="dialogGenerateFromTemplate" tabindex="-1" role="dialog" aria-labelledby="dialogGenerateFromTemplateLabel" aria-hidden="true">
 	    <div class="modal-header">
 	        <h4>Generate From Template</h4>
 	    </div>
