--- a/ide/ui/ide-git/src/main/resources/META-INF/dirigible/ide-git/git/git.html
+++ b/ide/ui/ide-git/src/main/resources/META-INF/dirigible/ide-git/git/git.html
@@ -46,7 +46,7 @@
 
 </head>
 
-<body border="1px" ng-app="workspace" ng-controller="WorkspaceController as workspace">
+<body ng-app="workspace" ng-controller="WorkspaceController as workspace" class="workspace-body">
 
 	<div class="view-fixed-top">
 	  <div class="btn-toolbar-top">
