--- a/ide/ui/ide-git/src/main/resources/META-INF/dirigible/ide-git/git/history.html
+++ b/ide/ui/ide-git/src/main/resources/META-INF/dirigible/ide-git/git/history.html
@@ -16,7 +16,7 @@
 
 	<title>Eclipse Dirigible - Git</title>
 
-	<script src="../../../../../services/v4/web/ide-core/ui/message-hub.js"></script>
+	<script src="/services/v4/web/ide-core/ui/message-hub.js"></script>
 
 	<link href="/webjars/fontawesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
@@ -30,17 +30,17 @@
 	<script src="/webjars/angularjs/1.4.7/angular-sanitize.min.js"></script>
 
 	<!-- jsTree -->
-	<link href="../../../../../services/v4/js/theme/resources.js/jstree.css" rel="stylesheet">
+	<link href="/services/v4/js/theme/resources.js/jstree.css" rel="stylesheet">
 	<script src="/webjars/jstree/3.3.5/jstree.min.js"></script>
 
 	<!-- Twitter Bootstrap with Theme Support -->
-	<link rel="stylesheet" href="../../../../../services/v4/js/theme/resources.js/bootstrap.min.css">
+	<link rel="stylesheet" href="/services/v4/js/theme/resources.js/bootstrap.min.css">
 	<script src="/webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 	<!-- Custom IDE Styles -->
-	<link type="text/css" rel="stylesheet" href="../../../../../services/v4/js/theme/resources.js/ide.css" />
+	<link type="text/css" rel="stylesheet" href="/services/v4/js/theme/resources.js/ide.css" />
 
-	<script src="../../../../../services/v4/web/ide-core/ui/ui-bootstrap-tpls-0.14.3.min.js"></script>
+	<script src="/services/v4/web/ide-core/ui/ui-bootstrap-tpls-0.14.3.min.js"></script>
 
 	<script src="history.js"></script>
 
@@ -49,8 +49,8 @@
 
 <body border="1px" ng-app="historyApp" ng-controller="HistoryContoller as history">
 	<div class="view-fixed-top">
-		<button type="button" class="btn btn-default btn-top" title="Refresh" ng-click="history.refreshRepository()"><i class="fa fa-refresh"></i></button>
-		Project: <b> {{history.selectedProject}} </b>
+		<button type="button" class="btn btn-default btn-top" title="Refresh" ng-click="refreshRepository()"><i class="fa fa-refresh"></i></button>
+		Project: <b> {{selectedProject}} </b>
 	</div>
 	<div class="workspace" style="height: 100%">
 		<table class="table table-striped">
@@ -63,7 +63,7 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr ng-repeat="next in history.history">
+				<tr ng-repeat="next in history">
 					<td class="col-md-1">{{next.shortId}}</td>
 					<td class="col-md-6">{{next.message}}</td>
 					<td class="col-md-2">{{next.author}} <{{next.emailAddress}}></td>
