--- a/ide/ui/ide-git/src/main/resources/META-INF/dirigible/ide-git/git/staging.html
+++ b/ide/ui/ide-git/src/main/resources/META-INF/dirigible/ide-git/git/staging.html
@@ -16,7 +16,7 @@
 
     <title>Eclipse Dirigible - Git</title>
 
-    <script src="../../../../../services/v4/web/ide-core/ui/message-hub.js"></script>
+    <script src="/services/v4/web/ide-core/ui/message-hub.js"></script>
 
     <link href="/webjars/fontawesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
@@ -30,23 +30,23 @@
     <script src="/webjars/angularjs/1.4.7/angular-sanitize.min.js"></script>
 
     <!-- jsTree -->
-    <link href="../../../../../services/v4/js/theme/resources.js/jstree.css" rel="stylesheet">
+    <link href="/services/v4/js/theme/resources.js/jstree.css" rel="stylesheet">
     <script src="/webjars/jstree/3.3.5/jstree.min.js"></script>
 
     <!-- Twitter Bootstrap with Theme Support -->
-    <link rel="stylesheet" href="../../../../../services/v4/js/theme/resources.js/bootstrap.min.css">
+    <link rel="stylesheet" href="/services/v4/js/theme/resources.js/bootstrap.min.css">
     <script src="/webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <!-- Custom IDE Styles -->
-    <link type="text/css" rel="stylesheet" href="../../../../../services/v4/js/theme/resources.js/ide.css" />
+    <link type="text/css" rel="stylesheet" href="/services/v4/js/theme/resources.js/ide.css" />
 
-    <script src="../../../../../services/v4/web/ide-core/ui/ui-bootstrap-tpls-0.14.3.min.js"></script>
+    <script src="/services/v4/web/ide-core/ui/ui-bootstrap-tpls-0.14.3.min.js"></script>
 
     <script src="staging.js"></script>
 
 </head>
 
-<body border="1px" ng-app="stagingApp" ng-controller="StagingContoller as staging">
+<body ng-app="stagingApp" ng-controller="StagingContoller as staging">
     <!-- Modal -->
     <div class="modal fade" id="revertModal" tabindex="-1" role="dialog" aria-labelledby="revertModalLabel">
         <div class="modal-dialog" role="document">
@@ -61,16 +61,16 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary" ng-click="staging.confirmRevert()"
+                    <button type="button" class="btn btn-primary" ng-click="confirmRevert()"
                         data-dismiss="modal">Revert</button>
                 </div>
             </div>
         </div>
     </div>
     <div class="view-fixed-top">
-        <button type="button" class="btn btn-default btn-top" title="Refresh" ng-click="staging.refresh()"><i
+        <button type="button" class="btn btn-default btn-top" title="Refresh" ng-click="refresh()"><i
                 class="fa fa-refresh"></i></button>
-        Project: <b> {{staging.selectedProject}} </b>
+        Project: <b> {{selectedProject}} </b>
     </div>
     <div class="workspace" style="height: 100%">
         <div class="row">
@@ -81,21 +81,21 @@
                     </div>
                     <select style="height: calc(100% - 2em); font-family: 'FontAwesome', 'Helvetica'"
                         class="dropdown dropdown-toggle dropdown-top form-control"
-                        ng-model="staging.selectedUnstagedFiles" multiple>
-                        <option ng-repeat="item in staging.unstagedFiles" id="{{item.path}}" value="{{item.path}}"
+                        ng-model="selectedUnstagedFiles" multiple>
+                        <option ng-repeat="item in unstagedFiles" id="{{item.path}}" value="{{item.path}}"
                             ng-selected="item.selected === 'selected'" ng-bind-html="item.label"
-                            ng-dblclick="staging.diffClicked(item)"></option>
+                            ng-dblclick="diffClicked(item)"></option>
                     </select>
                 </div>
                 <div>
                     <div class="btn-group pull-right" role="group" style="padding: 0.5em;">
-                        <button type="button" class="btn btn-default btn-top" ng-click="staging.downClicked()"
+                        <button type="button" class="btn btn-default btn-top" ng-click="downClicked()"
                             title="Add to Index"><i class="fa fa-arrow-down"></i></button>
-                        <button type="button" class="btn btn-default btn-top" ng-click="staging.upClicked()"
+                        <button type="button" class="btn btn-default btn-top" ng-click="upClicked()"
                             title="Remove from Index"><i class="fa fa-arrow-up"></i></button>
-                        <button type="button" class="btn btn-default btn-top" ng-click="staging.diffClicked()"
+                        <button type="button" class="btn btn-default btn-top" ng-click="diffClicked()"
                             title="View Differences"><i class="fa fa-align-center"></i></button>
-                        <button type="button" class="btn btn-default btn-top" ng-click="staging.revertClicked()"
+                        <button type="button" class="btn btn-default btn-top" ng-click="revertClicked()"
                             title="Revert"><i class="fa fa-reply"></i></button>
                     </div>
                 </div>
@@ -105,50 +105,44 @@
                     </div>
                     <select style="height: calc(100% - 2em); font-family: 'FontAwesome', 'Helvetica'"
                         class="dropdown dropdown-toggle dropdown-top form-control"
-                        ng-model="staging.selectedStagedFiles" multiple>
-                        <option ng-repeat="item in staging.stagedFiles" id="{{item.path}}" value="{{item.path}}"
+                        ng-model="selectedStagedFiles" multiple>
+                        <option ng-repeat="item in stagedFiles" id="{{item.path}}" value="{{item.path}}"
                             ng-selected="item.selected === 'selected'" ng-bind-html="item.label"
-                            ng-dblclick="staging.diffClicked(item)"></option>
+                            ng-dblclick="diffClicked(item)"></option>
                     </select>
                 </div>
             </div>
             <div class="col-sm-6">
-                <!-- <form class="form" style="height: 55%">
-					<div style="height: 2em">
-						<label>Differences:</label>
-					</div>
-					<pre style="height: calc(80% - 2em); overflow: auto;" class="form-control">{{staging.diff}}</pre>
-				</form> -->
                 <form class="form sticky-top">
                     <div style="height: 2em">
                         <label>Commit Message:</label>
                     </div>
-                    <textarea rows=10 class="form-control" ng-model="staging.commitMessage">
+                    <textarea rows=10 class="form-control" ng-model="commitMessage">
 					</textarea>
                 </form>
                 <form class="form-inline" style="padding: 1em;">
                     <div class="form-group row">
                         <label class="col-sm-2 col-form-label">Username:</label>
-                        <input class="col-sm-6 form-control" type="text" placeholder="" ng-model="staging.username"
+                        <input class="col-sm-6 form-control" type="text" placeholder="" ng-model="username"
                             required="required">
                         <label class="col-sm-2 col-form-label">Password:</label>
-                        <input class="col-sm-6 form-control" type="password" placeholder="" ng-model="staging.password"
+                        <input class="col-sm-6 form-control" type="password" placeholder="" ng-model="password"
                             required="required">
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-2 col-form-label">Email:</label>
-                        <input class="col-sm-6 form-control" type="text" placeholder="" ng-model="staging.email"
+                        <input class="col-sm-6 form-control" type="text" placeholder="" ng-model="email"
                             required="required">
                         <!-- <label class="col-sm-2 col-form-label">Committer:</label>
-						<input class="col-sm-6 form-control" type="text" placeholder="" ng-model="staging.committer" required="required"> -->
+						<input class="col-sm-6 form-control" type="text" placeholder="" ng-model="committer" required="required"> -->
                     </div>
                     <div>
                         <div class="btn-group pull-right" role="group" style="padding: 1em;">
                             <button type="button" class="btn btn-default btn-top"
-                                ng-click="staging.okCommitAndPushClicked()"><i class="fa fa-upload"></i> Commit &
+                                ng-click="okCommitAndPushClicked()"><i class="fa fa-upload"></i> Commit &
                                 Push</button>
                             <button type="button" class="btn btn-default btn-top"
-                                ng-click="staging.okCommitClicked()"><i class="fa fa-pencil"></i> Commit</button>
+                                ng-click="okCommitClicked()"><i class="fa fa-pencil"></i> Commit</button>
                         </div>
                     </div>
                 </form>
