--- a/ide/ui/ide-workbench/src/main/resources/META-INF/dirigible/ide/welcome.html
+++ b/ide/ui/ide-workbench/src/main/resources/META-INF/dirigible/ide/welcome.html
@@ -206,12 +206,14 @@
             $scope.searchText = '';
 
             $http.get('/services/v4/js/ide-core/services/templates.js').then(function (response) {
-                $scope.templates = response.filter(function (value, index, arr) { return !value.extension; });
+                $scope.templates = response.data.filter(function (value, index, arr) { return !value.extension; });
                 $scope.templateParameters = [];
+                console.info($.scope.templates.toString())
                 for (let i = 0; i < $scope.templates.length; i++) {
                     $scope.templateParameters[$scope.templates[i].id] = $scope.templates[i].parameters;
                 }
             });
+
             $http.get('/services/v4/ide/workspaces').then(function (response) {
                 $scope.workspaces = response;
             });
@@ -230,7 +232,7 @@
             }
 
             $scope.generateFromTemplate = function (template) {
-                //scope.$apply();
+                // scope.$apply();
                 $scope.selectedTemplate = template;
                 $('#generateFromTemplate').click();
             };
