--- a/releng/sap-cf-runtime/src/main/webapp/index-busy.html
+++ b/releng/sap-cf-runtime/src/main/webapp/index-busy.html
@@ -169,7 +169,7 @@
 				$http({
 		            method: 'GET',
 		            url: 'services/v4/healthcheck'
-		        }).success(function(healthStatus){
+		        }).then(function(healthStatus){
 		        	if (healthStatus.status === "Ready") {
 						window.location='home';
 					}
@@ -181,10 +181,9 @@
 						jobs.push(job);
 					}
 		        	$scope.jobs = jobs.sort((x, y) => x.name > y.name ? 1 : -1);
-		        }).error(function(e){
+		        }),function(e){
 		            console.error("Error retreiving the health status", e);
-		        });
-
+		        };
 			}, 1000);
 					
 		}]);
