--- a/ide/ui/ide-database/src/main/resources/META-INF/dirigible/ide-database/sql/result.html
+++ b/ide/ui/ide-database/src/main/resources/META-INF/dirigible/ide-database/sql/result.html
@@ -99,7 +99,7 @@
 
                 let csrfToken = null;
 
-                $http.get("", { headers: { "X-CSRF-Token": "Fetch" } }).success(function (data, statusCode, headers) {
+                $http.get("", { headers: { "X-CSRF-Token": "Fetch" } }).then(function (data, statusCode, headers) {
                     csrfToken = headers()["x-csrf-token"];
                 });
 
@@ -127,7 +127,7 @@
                                 'X-Requested-With': 'Fetch',
                                 'X-CSRF-Token': csrfToken
                             }
-                        }).success(function (result) {
+                        }).then(function (result) {
                             cleanScope();
                             if (result != null && result.length > 0) {
                                 $scope.rows = result;
@@ -154,7 +154,7 @@
                                 'X-Requested-With': 'Fetch',
                                 'X-CSRF-Token': csrfToken
                             }
-                        }).success(function (result) {
+                        }).then(function (result) {
                             cleanScope();
                             if (result != null && result.length > 0) {
                                 $scope.hasMultipleProcedureResults = result.length > 1;
@@ -201,7 +201,7 @@
                                 'X-Requested-With': 'Fetch',
                                 'X-CSRF-Token': csrfToken
                             }
-                        }).success(function (result) {
+                        }).then(function (result) {
                             cleanScope();
                             if (!isNaN(result)) {
                                 result = 'Rows updated: ' + result;
