--- a/releng/trial-all/src/main/webapp/index-busy.html
+++ b/releng/trial-all/src/main/webapp/index-busy.html
@@ -169,7 +169,7 @@
 				$http({
 		            method: 'GET',
 		            url: 'services/v4/healthcheck'
-		        }).success(function(healthStatus){
+		        }).then(function(healthStatus){
 		        	if (healthStatus.status === "Ready") {
 						window.location='home';
 					}
