index-busy fix after angularjs update

--- a/releng/desktop-all/src/main/webapp/index-busy.html
+++ b/releng/desktop-all/src/main/webapp/index-busy.html
@@ -170,11 +170,11 @@
 		            method: 'GET',
 		            url: 'services/v4/healthcheck'
 		        }).then(function(healthStatus){
-		        	if (healthStatus.status === "Ready") {
+		        	if (healthStatus.data.status === "Ready") {
 						window.location='home';
 					}
 					var jobs = [];
-					for (const [key, value] of Object.entries(healthStatus.jobs.statuses)) {
+					for (const [key, value] of Object.entries(healthStatus.data.jobs.statuses)) {
 						var job = new Object();
 						job.name = key;
 						job.status = value;
