--- a/releng/sap-kyma-runtime/src/main/webapp/index-busy.html
+++ b/releng/sap-kyma-runtime/src/main/webapp/index-busy.html
@@ -8,7 +8,7 @@
 		<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css">
 	
 		<!-- FontAwesome icon set -->
-    	<link type="text/css" href="/webjars/fontawesome/4.7.0/css/font-awesome.min.csss" rel="stylesheet">
+    	<link type="text/css" href="/webjars/fontawesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
 		<style>
 			.busy-indicator {
@@ -170,18 +170,18 @@
 		            method: 'GET',
 		            url: 'services/v4/healthcheck'
 		        }).then(function(healthStatus){
-		        	if (healthStatus.status === "Ready") {
+		        	if (healthStatus.data.status === "Ready") {
 						window.location='home';
 					}
 					var jobs = [];
-					for (const [key, value] of Object.entries(healthStatus.jobs.statuses)) {
+					for (const [key, value] of Object.entries(healthStatus.data.jobs.statuses)) {
 						var job = new Object();
 						job.name = key;
 						job.status = value;
 						jobs.push(job);
 					}
 		        	$scope.jobs = jobs.sort((x, y) => x.name > y.name ? 1 : -1);
-		        }).error(function(e){
+		        }), (function(e){
 		            console.error("Error retreiving the health status", e);
 		        });
 
