--- a/ide/ui/ide-workbench/src/main/resources/META-INF/dirigible/ide/welcome.html
+++ b/ide/ui/ide-workbench/src/main/resources/META-INF/dirigible/ide/welcome.html
@@ -213,7 +213,7 @@
                 }
             });
             $http.get('/services/v4/ide/workspaces').then(function (response) {
-                $scope.workspaces = response;
+                $scope.workspaces = response.data;
             });
 
             $scope.openTemplate = function (id) {
